# docker-cpp-stages

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: main.cpp
test/: test_gtsam.cpp
